# revolver

./: CMakeLists.txt  README.md  argos_requirements.txt
argos_utility/: CMakeLists.txt  string_utilities.h
argos_utility/configuration/: argos_configuration.h  base_configurable_resource.h  command_line_arg_parser.h
argos_utility/datatypes/: datatypes.h
argos_utility/logging/: argos_colored_text.h  argos_log.h
argos_utility/math/: angles.h  general.h  range.h  rng.cpp  rng.h
argos_utility/plugins/: dynamic_loading.h  factory.h
config/: duarte_evoconfig.xml  duarte_evoconfig_single.xml  evolve_specialisation.xml  evolve_trivial.xml  specialisation_evoconfig.xml
duarte_src/: mygetch.h  random.h  realt_geomeanfit_exp.cpp  realt_polyandry.cpp  responsethreshold_basic.cpp
evolutionary_problems/trivial/: trivial_evolution.cpp  trivial_evolution.h
evolutionary_problems/trivial_mating/: custom_colony_main.cpp  definitions.h  invalid_main.cpp  results_parser.cpp  simulator.cpp  simulator.h  standalone_main.cpp
plots/: ternaryplot_strong.py  ternaryplot_weak.py
src/: CMakeLists.txt  aclonal_evaluation.cpp  aclonal_evaluation.h  clonal_evaluation.cpp  clonal_evaluation.h  evaluation_strategy.cpp  evaluation_strategy.h  evolution.cpp  evolution.h  genotype.cpp  genotype.h  invalid_main.cpp  mating_evaluation.cpp  mating_evaluation.h  mating_population.cpp  mating_population.h  moo_population.cpp  moo_population.h  mulambda_selection.cpp  mulambda_selection.h  parallel_evolution.cpp  parallel_evolution.h  population.cpp  population.h  rank_selection.cpp  rank_selection.h  revolver_general.h  revolver_main.cpp  roulette_wheel_selection.cpp  roulette_wheel_selection.h  selection_strategy.cpp  selection_strategy.h  sequential_evolution.cpp  sequential_evolution.h  soo_population.cpp  soo_population.h
utility/: CMakeLists.txt  control_parameters.cpp  control_parameters.h  diploid_genotype.cpp  diploid_genotype.h  evaluation_config.cpp  evaluation_config.h  genotype.cpp  genotype.h  objectives.h  vector.cpp  vector.h
